# fast-mcp-gateway

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/docs/: mcp-gateway.md  production-readiness.md
docs/: index.html
examples/: agentos_gateway.py  audit_redact_hil.py  basic_app.py  echo_upstream.py  gateway.json  governed_gateway.py  live_gateway.py  plugin_gateway.py  poisoned_upstream.py
scripts/: README.md  probe_live_mcp.py  validate_agentos.py  validate_live.py  validate_plugins.py  validate_tools_api.py  validate_upstream_auth.py
src/fast_gateway/: __init__.py  access.py  app.py  builder.py  catalog.py  cli.py  config.py  connect.py  factory.py  hooks.py  models.py  reference.py  routing.py  search.py  secret_refs.py
src/fast_gateway/api/: __init__.py  groups.py  servers.py
src/fast_gateway/hil/: __init__.py  pending.py  plugin.py  views.py
src/fast_gateway/plugins/: __init__.py  oauth.py
src/fast_gateway/plugins/agentos/: README.md  __init__.py  detectors.py  plugin.py  policy.py  settings.py
src/fast_gateway/plugins/hil/: __init__.py  pending.py  plugin.py  views.py
src/fast_gateway/plugins/oauth/: __init__.py  client_credentials.py  plugin.py
src/fast_gateway/plugins/policy/: __init__.py  plugin.py
src/fast_gateway/plugins/tools_api/: __init__.py  plugin.py
src/fast_gateway/store/: __init__.py  base.py  sqlite.py
src/fast_mcp_gateway/: __init__.py  access.py  app.py  builder.py  catalog.py  connect.py  hooks.py  models.py  routing.py  search.py
src/fast_mcp_gateway/api/: __init__.py  groups.py  servers.py
src/fast_mcp_gateway/plugins/: __init__.py
src/fast_mcp_gateway/plugins/agentos/: README.md  __init__.py  detectors.py  plugin.py  policy.py  settings.py
src/fast_mcp_gateway/store/: __init__.py  base.py  sqlite.py
src/mcp_gateway/: __init__.py  access.py  app.py  builder.py  catalog.py  connect.py  hooks.py  models.py  plugins.py  routing.py  search.py
src/mcp_gateway/api/: __init__.py  groups.py  servers.py
src/mcp_gateway/integrations/: __init__.py
src/mcp_gateway/integrations/agt/: __init__.py  detectors.py  plugin.py  policy.py  settings.py
src/mcp_gateway/plugins/agentos/: README.md  __init__.py  detectors.py  plugin.py  policy.py  settings.py
src/mcp_gateway/store/: __init__.py  base.py  sqlite.py
tests/: test_access.py  test_agt_plugin.py  test_builder.py  test_cli.py  test_client_credentials.py  test_config.py  test_connect.py  test_factory.py  test_gateway_client.py  test_gateway_client_concurrency.py  test_groups_api.py  test_hil.py  test_hooks.py  test_models.py  test_oauth_plugin.py  test_plugins.py  test_policy_plugin.py  test_reference.py  test_routing.py  test_search.py  test_secret_refs.py  test_servers_api.py  test_smoke.py  test_store.py  test_tools_api_plugin.py
tools/: check_slop.py
