[project]
name = "fast-gateway"
version = "0.0.2"
description = "A lean, FastMCP-based gateway that turns a registry of upstream MCP servers into one governed, namespaced MCP endpoint mounted on FastAPI."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "niradler" }]
keywords = ["mcp", "fastmcp", "fastapi", "gateway", "llm", "model-context-protocol", "proxy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.136.3",
    "fastmcp>=3.3.1",
]

[project.optional-dependencies]
# Optional, EXPERIMENTAL: Microsoft agent-governance-toolkit (agent-os) policy engine.
# Only the AGT plugin needs it; the gateway and plugin system work fully without it.
# Sourced from GitHub via [tool.uv.sources] below until agent-os-kernel 4.x is on PyPI,
# so install from a uv project (`uv add "fast-gateway[agt]"`) — plain pip cannot
# resolve it yet. agent-os-kernel is being consolidated into agent-governance-toolkit-core.
# `agent-governance-toolkit-core` is a transitive dep of agent-os-kernel; it is listed
# explicitly only so its git source (below) applies (uv sources bind to direct deps).
# Once agent-os-kernel 4.x is on PyPI, drop the core line and the [tool.uv.sources] block.
agt = ["agent-os-kernel>=4.0.0", "agent-governance-toolkit-core>=4.0.0"]

[project.urls]
Homepage = "https://github.com/niradler/fast-mcp-gateway"
Repository = "https://github.com/niradler/fast-mcp-gateway"
Issues = "https://github.com/niradler/fast-mcp-gateway/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fast_gateway"]

[tool.hatch.build.targets.sdist]
include = ["src/fast_gateway", "README.md", "LICENSE"]

# TODO: agent-os 4.x lives only in the GitHub monorepo for now (PyPI `agent-os-kernel`
# lags at 3.7.0). Pull the kernel and its in-repo `core` dependency from git. Remove both
# entries once agent-os-kernel 4.x publishes to PyPI — the `agt` extra resolves normally then.
[tool.uv.sources]
agent-os-kernel = { git = "https://github.com/microsoft/agent-governance-toolkit.git", subdirectory = "agent-governance-python/agent-os" }
agent-governance-toolkit-core = { git = "https://github.com/microsoft/agent-governance-toolkit.git", subdirectory = "agent-governance-python/agent-governance-toolkit-core" }

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "mypy>=1.18.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.1",
    "asgi-lifespan>=2.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "C4",     # flake8-comprehensions
    "ASYNC",  # flake8-async
    "PT",     # flake8-pytest-style
    "RUF",    # ruff-specific
    "PLC0415",# import-outside-top-level — no inline/lazy imports inside functions
    "ERA",    # eradicate — no commented-out code
    "T20",    # flake8-print — no print(); use the logger
    "N",      # pep8-naming — snake_case funcs/vars, PascalCase classes
    "TID",    # flake8-tidy-imports — absolute imports only, no relative
    "FA",     # flake8-future-annotations — require `from __future__ import annotations`
    "LOG",    # flake8-logging — correct logger construction/use
    "G",      # flake8-logging-format — structured logging, no f-strings in log calls
    "RET",    # flake8-return — clean return flow
    "PTH",    # flake8-use-pathlib — pathlib over os.path
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "PLC0415",  # inline imports are idiomatic in tests
    "ERA",
    "T20",
    "N",
    "TID",
    "FA",
    "LOG",
    "G",
    "RET",
    "PTH",
]

[tool.ruff.lint.isort]
known-first-party = ["fast_gateway"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "agent_os.*"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"

[tool.coverage.run]
source = ["src/fast_gateway"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
